# Kiln

./: .coveragerc  .cursorrules  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE.txt  README.md  broken_pyproject.toml  checks.sh  conftest.py  dev-requirements.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/: pull_request_template.md
app/: EULA.md  LICENSE.txt
app/desktop/: README.md  WinInnoSetup.iss  build_desktop_app.sh  custom_tray.py  desktop.py  desktop_server.py  dev_server.py  pyproject.toml
app/desktop/dmg/: README.md  appdmg.json
app/desktop/studio_server/: data_gen_api.py  finetune_api.py  prompt_api.py  provider_api.py  repair_api.py  settings_api.py  test_data_gen_api.py  test_finetune_api.py  test_prompt_api.py  test_provider_api.py  test_repair_api.py  test_server.py  test_settings_api.py  webhost.py
guides/: Collaborating with Kiln.md  Fine Tuning LLM Models Guide.md  Model Support.md  (+1 more)
libs/core/: README.md  pyproject.toml
libs/core/kiln_ai/adapters/: __init__.py  adapter_registry.py  base_adapter.py  langchain_adapters.py  ml_model_list.py  prompt_builders.py  provider_tools.py  run_output.py  test_adapter_registry.py  test_generate_docs.py  test_langchain_adapter.py  test_ml_model_list.py  test_prompt_adaptors.py  test_prompt_builders.py  test_provider_tools.py  test_saving_adapter_results.py  test_structured_output.py
libs/core/kiln_ai/adapters/data_gen/: data_gen_prompts.py  data_gen_task.py  test_data_gen_task.py
libs/core/kiln_ai/adapters/fine_tune/: __init__.py  base_finetune.py  dataset_formatter.py  dataset_split.py  finetune_registry.py  fireworks_finetune.py  openai_finetune.py  test_base_finetune.py  test_dataset_formatter.py  test_dataset_split.py  test_fireworks_tinetune.py  test_openai_finetune.py
libs/core/kiln_ai/adapters/model_adapters/: __init__.py  base_adapter.py  langchain_adapters.py  openai_compatible_config.py  openai_model_adapter.py  test_base_adapter.py  test_langchain_adapter.py  test_openai_model_adapter.py  test_saving_adapter_results.py  test_structured_output.py
libs/core/kiln_ai/adapters/parsers/: json_parser.py  parser_registry.py  test_json_parser.py  test_parser_registry.py
libs/core/kiln_ai/adapters/repair/: __init__.py  repair_task.py  test_repair_task.py
libs/core/kiln_ai/datamodel/: __init__.py  basemodel.py  datamodel_enums.py  dataset_split.py  eval_datamodel.py  finetune.py  json_schema.py  model_cache.py  prompt.py  strict_mode.py  task.py  task_output.py  task_run.py  test_basemodel.py  test_dataset_split.py  test_example_models.py  test_model_cache.py  test_model_perf.py  test_models.py  test_output_rating.py
libs/core/kiln_ai/utils/: __init__.py  config.py  exhaustive_error.py  test_config.py
libs/server/: README.md  pyproject.toml
libs/server/kiln_server/: prompt_api.py  run_api.py  server.py  test_project_api.py  test_prompt_api.py  test_provider_management.py  test_repair_api.py  test_run_api.py  test_server.py  test_settings.py  test_task_api.py
(+91 files in other folders)
