[project]
name = "kiln-studio-desktop"
version = "0.1.0"
description = "The Kiln Desktop App. Download from https://getkiln.ai"
requires-python = ">=3.10"
dependencies = [
    "kiln-server",
    "pillow>=11.0.0",
    "pyinstaller==6.11.1",
    "pystray>=0.19.5",
]

[tool.uv.sources]
kiln-server = { workspace = true }
