[project]
name = "kiln-ai"
version = "0.5.1"
requires-python = ">=3.9"
readme = "README.md"
description = 'Kiln AI'
authors = [
  {name = "Steve Cosman, Chesterfield Laboratories Inc", email = "scosman@users.noreply.github.com"}
]

dependencies = [
    "coverage>=7.6.4",
    "jsonschema>=4.23.0",
    "langchain-aws>=0.2.4",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.4",
    "langchain>=0.3.5",
    "pdoc>=15.0.0",
    "pydantic>=2.9.2",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "pyright>=1.1.387",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.1",
]

[project.urls]
Homepage = "https://getkiln.ai"
Repository = "https://github.com/Kiln-AI/kiln"
Documentation = "https://kiln-ai.github.io/Kiln/kiln_core_docs/kiln_ai.html"
Issues = "https://github.com/Kiln-AI/kiln/issues"
