[project]
name = "kiln-server"
version = "0.1.0"
requires-python = ">=3.9"
description = 'Kiln AI Server'
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Steve Cosman, Chesterfield Laboratories Inc", email = "scosman@users.noreply.github.com"}
]

dependencies = [
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "kiln-ai>=0.5.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "pyright>=1.1.387",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.1",
]

[tool.uv.sources]
kiln-ai = { path = "../core" }


[project.urls]
homepage = "https://getkiln.ai"
repository = "https://github.com/Kiln-AI/kiln"
documentation = "https://github.com/Kiln-AI/kiln#readme"

